syntax = "proto3";

package finance;

option go_package = "github.com/urealaden/cova-cents/server/proto/pots";

import "common.proto";

message Pot {
    string id = 1;
    string name = 2;
    double target = 3;
    string theme = 4;
}

message AddPotRequest {
    Pot pot = 1;
}

message AddPotResponse {
    Pot pot = 1;
    finance.Status status = 2;
}

message RetrievePotsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message RetrievePotsResponse {
    repeated Pot pots = 1;
    finance.Status status = 2;
}

message UpdatePotRequest {
    Pot pot = 1;
}

message UpdatePotResponse {
    Pot pot = 1;
    finance.Status status = 2;
}

message DeletePotRequest {
    string id = 1;
}

message DeletePotResponse {    
    finance.Status status = 2;
}